[package]
edition = "2021"
name = "rtc-hal-demo"
version = "0.1.0"

[[bin]]
name = "rtc-hal-demo"
path = "./src/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-alloc = "0.7.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "defmt",
  "esp32",
  "unstable",
] }

critical-section = "1.2.0"
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32"] }

embedded-hal-bus = "0.3.0"

rtc-hal = { version = "0.2.4", features = ["defmt"] }
ds3231-rtc = { version = "0.2.1", optional = true }
ds1307-rtc = { version = "0.2.1", optional = true }

[features]
default = ["ds1307"]        # DS1307 is the default
ds3231 = ["dep:ds3231-rtc"]
ds1307 = ["dep:ds1307-rtc"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
